<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"
        android:text="SGame SDK Demo"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivUserAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivUserAvatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UserName: ..." />

            <TextView
                android:id="@+id/tvUserId"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UserId: ..." />

             <TextView
                 android:id="@+id/tvUserCoin"
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Coin: ..." />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:background="@drawable/bg_button"
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_login" />
        <Button
            android:layout_marginTop="@dimen/paddingNormal"
            android:background="@drawable/bg_button"
            android:id="@+id/btnLevelUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_level_up" />
        <Button
            android:layout_marginTop="@dimen/paddingNormal"
            android:background="@drawable/bg_button"
            android:id="@+id/btnPayment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_payment" />

        <Button
            android:layout_marginTop="@dimen/paddingNormal"
            android:background="@drawable/bg_button"
            android:id="@+id/btnLogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_logout" />

        <Button
            android:layout_marginTop="@dimen/paddingNormal"
            android:background="@drawable/bg_button"
            android:id="@+id/btnRotate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_rotate" />

        <!--<Button
            android:id="@+id/btnRotateScreen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_rotate_screen" />-->
    </LinearLayout>


</LinearLayout>